<resources>
    <!-- トップページ -->
    <string name="app_name_main">Wi-Fi HELPER</string>
    <string name="app_name_sub">for ADMIN</string>
    <string name="app_name">Wi-Fi HELPER for ADMIN</string>
    <string name="app_version">アプリバージョン：v1.0.0</string>
    <string name="top_message">設定を変更するCUONAにタッチしてください</string>
    <string name="start_reading">NFCリーダーを起動する</string>
    <string name="connecting_wifi">利用可能なWi-Fiへ接続を行っています</string>
    <string name="progress_message">必要なデータを取得中です。</string>
    <string name="logout">ログアウト</string>

    <!-- ログイン画面 -->
    <string name="sign_in_message">契約時のアカウントでログインしてください</string>
    <string name="sign_in_mail">メールアドレス</string>
    <string name="sign_in_password">パスワード</string>
    <string name="sign_in_button">ログインする</string>
    <string name="sign_in_progress_message">ログイン中です</string>

    <!-- nfc -->
    <string name="nfc_scan_title">スキャンの準備ができました</string>
    <string name="nfc_scan_message">CUONAへタッチしてください</string>

    <!-- about -->
    <string name="about_app">このアプリについて</string>
    <string name="about_app_message">本アプリは【CUONA】シリーズでの利用が可能なWi-Fi専用アプリです。ホテルや空港など様々な場所でのご利用が可能になります。</string>
    <string name="about_app_note">※ ご利用企業様に応じて若干見た目が異なる場合がございます。</string>
    <string name="about_app_contact">CUONAについてのお問合わせはこちら</string>

    <!-- 書き込み設定ページ -->
    <string name="detect_corona">CUONAを検出しました！</string>
    <string name="detect_corona_message">設定情報を入力して、\n再度CUONAにタップしてください</string>
    <string name="write_ssid">SSIDを入力してください</string>
    <string name="write_pass">パスワードを入力してください</string>
    <string name="write_kind_wep">WEP</string>
    <string name="write_kind_wpa">WPA/WPA2</string>
    <string name="write_kind_none">None</string>
    <string name="write_expire_date">日数を選択してください</string>
    <string name="write_expire_date_title">Wi-Fi有効期限日数</string>
    <string name="write_expire_date_option">日</string> <!-- Wi-Fi有効期限日数の単位 -->
    <string name="write_expire_date_unlimited">無制限</string> <!-- Wi-Fi有効期限日数の単位 -->
    <string name="edit_text_limit_toast">SSIDとパスワードは50文字以下で設定してください</string> <!-- Wi-Fi有効期限日数の単位 -->
    <string name="writing_progress_message">書き込み中です。</string>

    <!-- 書き込み完了ページ -->
    <string name="done_write">設定が完了しました！</string>
    <string name="done_write_message">入力された情報が設定されました</string>
    <string name="done_ssid">SSID</string>
    <string name="done_pass">PASS</string>
    <string name="done_wifi_kind">TYPE</string>
    <string name="done_expire_date">DAYS</string>
    <string name="back_to_top_button">最初の画面へ戻る</string>

    <!-- ダイアログ -->
    <string name="nfc_dialog">本アプリを使用するには、NFCをオンに設定する必要があります。\n端末の設定からNFCをオンにしてください。</string>
    <string name="bluetooth_dialog">本アプリを使用するには、Bluetoothをオンに設定する必要があります。\nBluetoothをオンにしてもよろしいですか？</string>
    <string name="grant_permission">本アプリを使用するには、位置情報へのアクセスを許可する必要があります。</string>

    <!-- エラー -->
    <string name="error_common">必要なデータの取得に失敗しました。\n再度お試しください。</string>
    <string name="error_network_disable">利用可能なデバイス情報一覧の取得に失敗しました。\nインターネットに接続してください。</string>
    <string name="error_network_disable_sign_in">ログインに失敗しました。\nインターネットに接続してください。</string>
    <string name="error_fail_get_device_ids">一覧データの取得に失敗しました。\nアプリを再起動して再取得してください。</string>
    <string name="load_devices_failed">デバイス一覧の取得に失敗しました</string>
    <string name="error_read_service_failed">このNFCではWi-Fiサービスがご利用できません。</string>
    <string name="error_not_exist_in_devise_ids">利用されたNFCは本アプリに対応していません。</string>
    <string name="error_not_owners">利用されたNFCは契約したデバイスと異なります。</string>
    <string name="error_not_exist_devise">サービスに紐付けされているデバイスが見つかりません</string>
    <string name="error_incorrect_touch_nfc">NFCが読み取れませんでした。正しくタッチできていないか、本アプリに対応していない可能性があります。</string>
    <string name="error_write_setting">書き込みに失敗しました。再度タッチして書き込みを行ってください。</string>

    <!-- バリデーション -->
    <string name="validation_not_correct">パスワードまたはメールアドレスに誤りがあります</string>
    <string name="validation_email_is_blank">メールアドレスを入力してください</string>
    <string name="validation_email_too_long">メールアドレスは50文字以下で入力してください</string>
    <string name="validation_password_is_blank">パスワードを入力してください</string>
    <string name="validation_password_is_too_short">パスワードは６文字以上で入力してください</string>
    <string name="validation_password_too_long">パスワードは50文字以下で入力してください</string>

    <!-- 全体 -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_kana">キャンセル</string>
</resources>
