<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.co.conol.wifihelper_admin_android.activity.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/logoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/app_name_main"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView">
                <requestFocus />
            </TextView>

            <TextView
                android:id="@+id/subLogoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/style_black_round"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/app_name_sub"
                android:textColor="@color/darkWhite"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoTextView" />

            <EditText
                android:id="@+id/signInMailEditText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/style_round_box_white_back_2"
                android:ems="10"
                android:hint="@string/sign_in_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="owner1@example.com"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInMessageTextView" />

            <EditText
                android:id="@+id/signInPasswordEditText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/style_round_box_white_back_2"
                android:ems="10"
                android:hint="@string/sign_in_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="PASSWORD"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInMailEditText" />

            <TextView
                android:id="@+id/signInMessageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/sign_in_message"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subLogoTextView" />

            <TextView
                android:id="@+id/appAboutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:onClick="onAppAboutTextViewTapped"
                android:padding="8dp"
                android:text="@string/about_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInButtonConstrainLayout" />

            <Button
                android:id="@+id/signInButtonConstrainLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:text="@string/sign_in_button"
                android:onClick="onSignInButtonTapped"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInPasswordEditText" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <include
        layout="@layout/layout_progress_dialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
