<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.co.conol.wifihelper_admin_android.activity.WriteDoneActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.898">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/logoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/app_name_main"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView"/>

            <TextView
                android:id="@+id/subLogoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/style_black_round"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/app_name_sub"
                android:textColor="@color/darkWhite"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoTextView" />

            <ImageView
                android:id="@+id/coronaImageView"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subLogoTextView"
                app:srcCompat="@drawable/img_corona" />

            <TextView
                android:id="@+id/detectTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/done_write"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coronaImageView" />

            <TextView
                android:id="@+id/detectMessageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/done_write_message"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detectTextView" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/settingConstraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detectMessageTextView">

                <TextView
                    android:id="@+id/ssidTagTextView"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/style_black_round"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/done_ssid"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ssidTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/ssidTagTextView"
                    app:layout_constraintLeft_toRightOf="@+id/ssidTagTextView"
                    app:layout_constraintTop_toTopOf="@+id/ssidTagTextView"
                    tools:text="ssid" />

                <TextView
                    android:id="@+id/passTagTextView"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/style_black_round"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/done_pass"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ssidTagTextView" />

                <TextView
                    android:id="@+id/passTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/passTagTextView"
                    app:layout_constraintLeft_toRightOf="@+id/passTagTextView"
                    app:layout_constraintTop_toTopOf="@+id/passTagTextView"
                    tools:text="pass" />

                <TextView
                    android:id="@+id/typeTagTextView"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/style_black_round"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/done_wifi_kind"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passTagTextView" />

                <TextView
                    android:id="@+id/typeTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/typeTagTextView"
                    app:layout_constraintLeft_toRightOf="@+id/typeTagTextView"
                    app:layout_constraintTop_toTopOf="@+id/typeTagTextView"
                    tools:text="type" />

                <TextView
                    android:id="@+id/daysTagTextView"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/style_black_round"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/done_expire_date"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/typeTagTextView" />

                <TextView
                    android:id="@+id/daysTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/daysTagTextView"
                    app:layout_constraintLeft_toRightOf="@+id/daysTagTextView"
                    app:layout_constraintTop_toTopOf="@+id/daysTagTextView"
                    tools:text="days" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/backToTopButton"
                android:onClick="onBackToTopButtonClicked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:text="@string/back_to_top_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingConstraintLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
